--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Webpack with angular 2</title>
+    <link rel="stylesheet" href="stylesheets/semantic.min.css" media="screen" title="no title" charset="utf-8">
   </head>
   <body>
     <app-component></app-component>
