--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <link rel="stylesheet" href="stylesheets/semantic.min.css" media="screen" title="no title" charset="utf-8">
   </head>
   <body>
-    <app-component></app-component>
+    <div class="ui main text container" style="margin-top:50px">
+      <app-component></app-component>
+    </div>
     <script type="text/javascript" src="http://localhost:8080/webpack-dev-server.js"></script>
     <script type="text/javascript" src="dist/polyfill.bundle.js"></script>
     <!-- <script type="text/javascript" src="dist/devserver.bundle.js"></script> -->
