--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="ui main text container" style="margin-top:50px">
-      <app-component></app-component>
+      <reddit-article></reddit-article>
     </div>
     <script type="text/javascript" src="http://localhost:8080/webpack-dev-server.js"></script>
     <script type="text/javascript" src="dist/polyfill.bundle.js"></script>
